2014-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h: Make sure that Windows _aligned_malloc() is not
	used under MinGW unless the CRT version allows it.

2014-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (InterpolateViewColor): Applied patch by
	Troy Patteson plus fixes to ignore opacity channel if image matte
	is false.  Replaces most of the code rewritten on 2014-02-16 and
	which produced a faint darkened border.  The results look stellar
	now.

2014-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c: Applied patch by Troy Patteson to improve
	non-integral rotation by around 40% by minimizing added image
	borders.  This may cause small differences in results for some
	images.

	* reference/filter/Rotate10.miff: Update rotate 10 degrees
	reference image so that PerlMagick test passes.

	* magick/shear.c: Applied patch by Troy Patteson to fix
	SourceForge issue #260 "Rotation exhibits clipping/shearing errors
	for short wide images at some angles".

2014-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Fix documentation to note that 'unspecified
	alpha' is the GraphicsMagick default when writing TIFF rather than
	'associated alpha'.  Much thanks to Mats Peterson for alerting us
	of this error.

2014-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (InterpolateViewColor): Added a hack so that
	affine transformations and displace composite do not have
	background colored fringing on the transferred image edges when
	the background is completely transparent.  Fringing problem was
	caused by one or more of the line ends being a transparent pixel
	outside of the bounds of the original image content.  May not be
	the final solution.

2014-02-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (AcquireSemaphoreInfo): Document that this
	function was deprecated.