@@ -35,6 +35,19 @@
 <div class="document">
 
 
+<p>2014-03-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/nt_base.c (NTResourceToBlob): According to Microsoft
+Report article 193678 (<a class="reference external" href="http://support.microsoft.com/kb/193678">http://support.microsoft.com/kb/193678</a>),
+FreeResource() is not needed in WIN32 and performs no useful
+function.  Remove use of it.  Also remove use of UnlockResource()
+which is similarly unuseful for WIN32.</li>
+<li>configure.ac (MAGICK_LIBRARY_REVISION): Test for Windows
+_aligned_malloc() is not reliable.  Use Windows CRT version to
+decide if it is available.</li>
+</ul>
+</blockquote>
 <p>2014-03-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
